Update: Dockerization with Watchtower, Scheduled Restarts, and DB Task Queue persistent

--- a/S2O1.API/appsettings.json
+++ b/S2O1.API/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=2S1O;Integrated Security=true;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=2S1O;Integrated Security=true;TrustServerCertificate=True;",
+    "DockerConnection": "Server=db;Database=2S1O;User Id=sa;Password=Q1w2e3r4!;Encrypt=True;TrustServerCertificate=True;"
   }
 }
