Fix Watchtower Docker API version issue (Client 1.25 too old)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,7 +44,7 @@ services:
         condition: service_healthy
 
   watchtower:
-    image: containrrr/watchtower
+    image: containrrr/watchtower:latest
     container_name: s2o1_watchtower
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
@@ -52,6 +52,7 @@ services:
       - WATCHTOWER_POLL_INTERVAL=300
       - WATCHTOWER_CLEANUP=true
       - WATCHTOWER_INCLUDE_RESTARTING=true
+      - DOCKER_API_VERSION=1.44
     restart: always
 
 volumes:
